--- a/style.css
+++ b/style.css
@@ -5,14 +5,22 @@
 }
 
 body {
-  background-color: #DEDEDE;
-  color: #313732;
+  background-color: #D3D3DA;
+  color: #1D1A18;
   width: auto;
   font: 'Noto Serif', serif;
 }
 
+header {
+  background-color: #A75737;
+}
+
 h1 {
-  color: #F26101;
+  color: #28252C;
   size: 40px;
   font: 'Oswald', sans-serif;
+}
+
+.main {
+
 }
