--- a/style.css
+++ b/style.css
@@ -3,107 +3,125 @@
   padding: 0;
   box-sizing: border-box;
 }
-a {color:inherit;}
-a:hover { color: inherit;}
-/*--
-begin basic styling
+a { color:inherit; text-decoration: none; }
+a:hover { color: inherit; }
+/*------------------------
+      FONTS AND COLORS
 
-colors needed:
-background f2f2f2
-text 30383b
-dark  d78d1e
-light f2c608
-middle f2b11b
+    font-family: 'Lato', sans-serif;
+    font-family: 'Roboto', sans-serif;
 
-font-family: 'PT Sans Narrow', sans-serif;
-font-family: 'Slabo 27px', serif;
---*/
+--------------------------*/
+
 html {
-  background-color: #F2F2F2;
-  color: #1D1A18;
-  font-family: 'Slabo 27px', serif;
+  background-color: #f4f4f4;
+  color: #1F1F1E;
+  font-family: 'Roboto', sans-serif;
   font-size: 10px;
 }
-header {
-  border-bottom: 1px solid #30383b;
-  opacity: 10%;
-  width: 90%;
-  height: auto;
-  margin: 0 auto;
-  padding: 0;
+
+body {
   font-size: 2rem;
 }
-nav {
-  font-size: 1.8rem;
+
+header {
+  color: #fff;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(IMAG1227.jpg);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
 }
-h1, h2, h3, h4, h5, h6 {
-  color: ##30383b;
-  font-family: 'PT Sans Narrow', sans-serif;
-}
-h1 {
-  font-size: 3.2rem;
-  margin: 0 0 20px 0;
-}
-h2 {
-  font-size: 2.4rem;
-}
-p {
-  font-size: 1.8rem;
-  line-height: 140%;
-  padding: 0 0 15px 0;
-}
-section {
-  width: 100%;
-  padding: 10px 20px;
-}
-table {
-  font-size: 1.8rem;
-  text-align: left;
-  width: 50%;
-  display: inline-block;
-}
-th, tr, td {
-  padding: 5px 15px 5px 0;
-}
-th {
-  font-size: 1.8rem;
-  font-weight: bold;
-}
-ul li {
-  font-size: 1.6rem;
+
+nav ul li {
   list-style: none;
   display: inline-block;
 }
-form {
 
+section {
+  display: block;
+  padding: 50px 10px 0px 10px;
+  margin: 20px auto;
 }
-/*--
-General, reusable classes
---*/
+h1,
+h2,
+h3 {
+  font-family: 'Lato', sans-serif;
+}
+h1 {
+  font-size: 4rem;
+}
+
+p {
+  margin: 20px 10px;
+}
 .width {
-  max-width: 1000px;
-  min-width: 400px;
-  margin: 0 auto;
-  padding: 0;
+  max-width: 1200px;
 }
-
-/*--
-
---*/
-#main-title {
+.name {
   font-size: 7rem;
+  letter-spacing: .3rem;
+  font-weight: 300;
+  padding-left: 70px;
+  padding-top: 100px;
+}
+
+.name strong {
   font-weight: 400;
-  letter-spacing: .25rem;
-  color: #d78d1e;
+}
+
+.about-name {
+  font-size: 3rem;
+  font-family: 'Lato', sans-serif;
+  letter-spacing: 2px;
+  display: block;
+  float: left;
+  padding-right: 20px;
+  font-weight: 300;
+}
+
+.about-name:first-of-type {
+  padding-left: 85px;
+}
+
+.about-img {
+  border-radius: 50%;
+  width: 20%;
+  float: left;
+  margin-top: 30px;
+}
+
+.section-about {
+  display: inline-block;
+  width: 70%;
+  padding-left: 5%;
+  float: left;
+}
+
+.section-contact {
+  display: block;
+  width: 100%;
+}
+
+.contact-form {
+  display: block;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.form-input {
+  width: 50%;
+  margin: 0 auto;
+}
+
+.form-input input,
+.form-input textarea {
+  margin: 10px;
   padding: 10px;
-  text-align: center;
-  min-width: 450px;
+  width: 100%;
+  display: block;
 }
-.main {
-  width: 90%;
-  min-width: 450px;
-  margin: 15px 2.5%;
-}
-.head {
-  font-size: 3.5rem;
+
+.form-input textarea {
+  min-height: 250px;
+  min-width: 100%;
 }
